kubernetes/base/gotify/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  namespace: gotify
  labels:
    project: gotify
    component: gotify-server
spec:
  replicas: 1
  selector:
    matchLabels:
      project: gotify
      component: gotify-server
  template:
    metadata:
      labels:
        project: gotify
        component: gotify-server
    spec:
      containers:
      - name: gotify
        image: gotify/server
        ports:
          - containerPort: 80
