kubernetes/base/gotify/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify
  labels:
    project: gotify
    component: gotify-server
spec:
  selectors:
    project: gotify
    component: gotify-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
