kubernetes/base/gotify/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gotify
  labels:
    project: gotify
    component: gotify-server
spec:
  rules:
  - host: "gotify.funkyboy.zone"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gotify
            port:
              number: 80
